# mealmenu

./: MEALPLAN_06_03.md  README.md  pyproject.toml
mealplans/06_13_mealplan/: ingredients.md  mealplan.md
mealplans/06_18_mealplan/: ingredients.md  mealplan.md
mealplans/06_28_mealplan/: ingredients.md  mealplan.md
mealplans/07_02_mealplan/: ingredients.md  mealplan.md
src/menumaker/: menumaker.py
