[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menumaker"
dynamic = ["version"]
description = 'A CLI script/library to generate meals from a meal plan.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Michael Cox", email = "mcox59@vols.utk.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Michael Cox/menumaker#readme"
Issues = "https://github.com/Michael Cox/menumaker/issues"
Source = "https://github.com/Michael Cox/menumaker"

[tool.hatch.version]
path = "src/menumaker/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/menumaker tests}"

[tool.coverage.run]
source_pkgs = ["menumaker", "tests"]
branch = true
parallel = true
omit = [
  "src/menumaker/__about__.py",
]

[tool.coverage.paths]
menumaker = ["src/menumaker", "*/menumaker/src/menumaker"]
tests = ["tests", "*/menumaker/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
